# vcl_kra_cuin_checker

./: .gitignore  HANDOVER.md  README.md  UAT_OAT_GUIDE.md  pyproject.toml
vcl_kra_validation/: api.py  hooks.py  modules.txt
vcl_kra_validation/fixtures/: _client_script.js  client_script.json  custom_field.json
vcl_kra_validation/scripts/: backfill_kra_fields.py
